--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -141,7 +141,7 @@
     "    z3 = pd.Series.subtract(x, y3)\n",
     "    return z3\n",
     "\n",
-    "def stationarity(x):\n",
+    "#def stationarity(x):\n",
     "    \n",
     "\n",
     "with PdfPages('seasonal_stock_ticks.pdf') as pdf:\n",
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -216,6 +216,90 @@
     "        plt.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
     "        pdf.savefig(bbox_inches='tight')\n",
     "        plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with PdfPages('crosscompare_stock_ticks.pdf') as pdf:\n",
+    "    for i in range(0,len(df_pre)-240,240):\n",
+    "        \n",
+    "        fig = plt.figure()\n",
+    "        t = 'Year ' + str(df_pre.iloc[i:i+1].index.year[0])\n",
+    "        fig.suptitle(t, fontsize=14)\n",
+    "        \n",
+    "        for j in xrange(0, len(df_pre.columns),2):\n",
+    "            ax1 = fig.add_subplot(223)\n",
+    "            ax1.plot(range(0,60), detrend(df_pre.iloc[i:i+60,j], 1))\n",
+    "            ax1.set_title(\"3rd quarter Jul-Sept\")\n",
+    "            ax2 = fig.add_subplot(224)\n",
+    "            ax2.plot(range(0,60), detrend(df_pre.iloc[i+60:i+120,j], 1))\n",
+    "            ax2.set_title(\"4th quarter Oct-Dec\")\n",
+    "\n",
+    "            if i >= 1680:\n",
+    "                break\n",
+    "\n",
+    "            ax3 = fig.add_subplot(221)\n",
+    "            ax3.plot(range(0,60), detrend(df_pre.iloc[i+120:i+180,j], 1))\n",
+    "            ax3.set_title(\"1st quarter Jan-Mar\")\n",
+    "\n",
+    "            ax4 = fig.add_subplot(222)\n",
+    "            ax4.plot(range(0,60), detrend(df_pre.iloc[i+180:i+240,j], 1),\n",
+    "                     label=df_pre.columns[j].split(\"_\")[0])\n",
+    "            ax4.set_title(\"2nd quarter Apr-Jun\")\n",
+    "            ax4.legend(bbox_to_anchor=(1.0, 0.5), loc='center left', borderaxespad=0.)\n",
+    "\n",
+    "        plt.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
+    "        pdf.savefig(bbox_inches='tight')\n",
+    "        plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 1800 entries, 2010-07-07 to 2017-08-28\n",
+      "Data columns (total 20 columns):\n",
+      "abb_close        1800 non-null float64\n",
+      "abb_volume       1800 non-null float64\n",
+      "asys_close       1800 non-null float64\n",
+      "asys_volume      1800 non-null float64\n",
+      "ccgi_close       1800 non-null float64\n",
+      "ccgi_volume      1800 non-null float64\n",
+      "cenx_close       1800 non-null float64\n",
+      "cenx_volume      1800 non-null float64\n",
+      "cmi_close        1800 non-null float64\n",
+      "cmi_volume       1800 non-null float64\n",
+      "fslr_close       1800 non-null float64\n",
+      "fslr_volume      1800 non-null float64\n",
+      "ge_close         1800 non-null float64\n",
+      "ge_volume        1800 non-null float64\n",
+      "pcrfy_close      1800 non-null float64\n",
+      "pcrfy_volume     1800 non-null float64\n",
+      "s&p500_close     1800 non-null float64\n",
+      "s&p500_volume    1800 non-null float64\n",
+      "tsla_close       1800 non-null float64\n",
+      "tsla_volume      1800 non-null float64\n",
+      "dtypes: float64(20)\n",
+      "memory usage: 295.3 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_pre.info()"
    ]
   },
   {
