--- a/pipeline-Gautam.ipynb
+++ b/pipeline-Gautam.ipynb
@@ -20,7 +20,9 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -82,7 +84,9 @@
   {
    "cell_type": "code",
    "execution_count": 251,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -341,7 +345,9 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -582,7 +588,9 @@
   {
    "cell_type": "code",
    "execution_count": 254,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -728,6 +736,7 @@
    "cell_type": "code",
    "execution_count": 255,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -770,7 +779,9 @@
   {
    "cell_type": "code",
    "execution_count": 256,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "TypeError",
@@ -796,7 +807,9 @@
   {
    "cell_type": "code",
    "execution_count": 257,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -843,7 +856,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "detrend.plot()"
@@ -852,7 +867,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -872,7 +889,9 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "monthly = pd.Series([gm_returns[x:x+250].sum() for x in range(0,len(gm_returns),250)])"
@@ -881,7 +900,9 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -911,7 +932,9 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -938,7 +961,9 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_months = pd.DataFrame()\n",
@@ -949,7 +974,9 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -979,7 +1006,9 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1009,7 +1038,9 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Machine Learning Approaches\n",
@@ -1033,7 +1064,9 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Evaluation metrics\n",
@@ -1054,7 +1087,9 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1073,7 +1108,9 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1104,7 +1141,9 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1124,7 +1163,9 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2047,9 +2088,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Python3]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Python3]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2061,7 +2102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
